# k2Engine

./: .gitignore  K2Engineについて.docx  cleanup.bat  readme.txt  samplelevel.max  setup.bat  右クリックで管理者として実行してね.bat
3dsMaxScripts/3dsMaxScripts/: makefile  tkExporter.ms  tkExporter_layout.ms  tkExporter_layout.vms
3dsMaxScripts/3dsMaxScripts/sub/: tkExporterCommon.ms  tkmExporter.ms  tksExporter.ms
Game/: BackGround.cpp  BackGround.h  Game.vcxproj  Game.vcxproj.filters  GameCamera.cpp  Player.cpp  Player.h  main.cpp
Game/Assets/: fxaa.fx
Game/Assets/shader/: DeferredLighting.fx  RenderToGBufferFor3DModel.fx  fxaa.fx  model.fx  ssao.fx  tonemap.fx
Game/system/: system.cpp
GameTemplate/Game/: BackGround.h  Game.cpp  Game.h  Game.sln  Game.vcxproj  Game.vcxproj.filters  GameCamera.h  Player.cpp  main.cpp
GameTemplate/Game/system/: system.cpp
GameTemplate/k2Engine/: k2Engine.cpp  k2Engine.h  k2Engine.vcxproj  k2Engine.vcxproj.filters  k2EnginePreCompile.h
GameTemplate/k2Engine/camera/: CameraCollisionSolver.cpp  CameraCollisionSolver.h  SpringCamera.cpp  SpringCamera.h
GameTemplate/k2Engine/collision/: CollisionObject.cpp  CollisionObject.h
GameTemplate/k2Engine/dbg/: dbgVectorRenderer.cpp  dbgVectorRenderer.h
GameTemplate/k2Engine/geometry/: AABB.cpp  AABB.h  GeometryData.cpp  GeometryData.h  SceneGeometryData.cpp  SceneGeometryData.h
GameTemplate/k2Engine/graphics/: Bloom.cpp  Bloom.h  CascadeShadowMapMatrix.cpp  CascadeShadowMapMatrix.h  Dof.cpp  Dof.h  FontRender.cpp  FontRender.h  Fxaa.cpp  Fxaa.h  IRenderer.h  LightCulling.cpp  LightCulling.h  ModelRender.cpp  ModelRender.h  MyRenderer.h  PostEffect.cpp  PostEffect.h  PostEffectBase.cpp  RenderingEngine.cpp  RenderingEngine.h  SceneLight.cpp  SceneLight.h  ShadowMapRender.cpp  ShadowMapRender.h  SpriteRender.cpp  SpriteRender.h  Ssao.cpp  Ssr.cpp  Ssr.h  ToneMap.cpp  ToneMap.h  VolumeLightRender.cpp  VolumeSpotLight.cpp  VolumeSpotLight.h
GameTemplate/k2Engine/level2DRender/: Level2DRender.cpp  Level2DRender.h  MapChip2DRender.cpp  MapChip2DRender.h
GameTemplate/k2Engine/level3D/: Level.cpp  Level.h  MapChip.cpp  MapChip.h  MapChipRender.cpp  MapChipRender.h
GameTemplate/k2Engine/level3DRender/: LevelRender.cpp  LevelRender.h  MapChipRender.cpp  MapChipRender.h
GameTemplate/k2Engine/nature/: SkyCube.cpp  SkyCube.h
GameTemplate/k2EngineLow/: k2Engine.cpp  k2Engine.h  k2EngineLow.cpp  k2EngineLow.h  k2EngineLow.vcxproj  k2EngineLow.vcxproj.filters  k2EngineLowPreCompile.h
GameTemplate/k2EngineLow/ExEngine/: ExEngine.h  readme.txt
GameTemplate/k2EngineLow/ExEngine/Photon/Demos/demo_memory/cocos2dx/: CMakeLists.txt
GameTemplate/k2EngineLow/ExEngine/Photon/Demos/demo_memory/cocos2dx/inc/: AppDelegate.h  ListController.h  View.h  ViewConstants.h
GameTemplate/k2EngineLow/ExEngine/Photon/Demos/demo_memory/cocos2dx/resources/: icons-readme.txt
GameTemplate/k2EngineLow/ExEngine/Photon/Demos/demo_memory/cocos2dx/src/: AppDelegate.cpp  ListController.cpp  View.cpp
GameTemplate/k2EngineLow/HID/: GamePad.cpp  GamePad.h  GamePadVIbration.cpp  GamePadVibration.h
GameTemplate/k2EngineLow/MiniEngine/: Animation.cpp  AnimationClip.cpp  AnimationPlayController.cpp  DescriptorHeap.cpp  GaussianBlur.cpp  Model.cpp  NullTextureMaps.h  Skeleton.cpp
GameTemplate/k2EngineLow/dbg/: MyAssert.h  MyLog.h
GameTemplate/k2EngineLow/gameObject/: GameObjectManager.h  Gameobjectmanager.cpp  IGameObject.cpp  IGameobject.h
GameTemplate/k2EngineLow/geometry/: AABB.cpp  AABB.h  BSP.cpp  BSP.h  BVH.cpp  BVH.h
GameTemplate/k2EngineLow/graphics/: Animation.cpp  Animation.h  AnimationClip.cpp  AnimationClip.h  AnimationPlayController.cpp  AnimationPlayController.h  Camera.cpp  Camera.h  ComputeAnimationVertexBuffer.cpp  ComputeAnimationVertexBuffer.h  ConstantBuffer.cpp  ConstantBuffer.h  DescriptorHeap.cpp  DescriptorHeap.h  DescriptorHeap_inline.h  FrameBuffer.cpp  FrameBuffer.h  GPUBuffer.cpp  GPUBuffer.h  GaussianBlur.cpp  GaussianBlur.h  GraphicsEngine.cpp  GraphicsEngine.h  IShaderResource.h  IUnorderAccessResource.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  MeshParts.cpp  (+27 more)
GameTemplate/tools/: setup.ps1  右クリックで管理者として実行してね.bat
Sample/: cleanup.bat  readme.txt  setup.bat
Sample/Sample_00/: k2EngineLow
Sample/Sample_03/: k2Engine
Sample/Sample_07/: k2Engine
Sample/Sample_09/: k2Engine
Sample/Sample_12/: k2EngineLow
Sample/Sample_17/: k2EngineLow
Sample/Sample_20/: k2Engine
Sample/Sample_24 - コピー/: k2Engine  k2EngineLow
SourceAssets/modelData/: vector.FBX  vector.max
fig/animation/: sample.fbx
k2Engine/: k2Engine.vcxproj  k2Engine.vcxproj.filters  k2EnginePreCompile.cpp  k2EnginePreCompile.h
k2Engine/graphics/: Bloom.h  CascadeShadowMapMatrix.cpp  Dof.cpp  Dof.h  FontRender.cpp  FontRender.h  Fxaa.cpp  Fxaa.h  ModelRender.cpp  ModelRender.h  MyRenderer.h  PostEffect.cpp  PostEffect.h  RenderingEngine.cpp  RenderingEngine.h  ShadowMapRender.cpp  ShadowMapRender.h  SpriteRender.cpp  SpriteRender.h  Ssao.cpp  Ssao.h  ToneMap.cpp  ToneMap.h
k2Engine/sound/: SoundEngine.cpp  SoundEngine.h  SoundSource.cpp  SoundSource.h  WaveFile.cpp  WaveFile.h  WaveFileBank.cpp  WaveFileBank.h
k2EngineLow/: k2EngineLow.vcxproj  k2EngineLow.vcxproj.filters  k2EngineLowPreCompile.cpp
k2EngineLow/ExEngine/: ExEngine.h
k2EngineLow/MiniEngine/: Camera.cpp  Camera.h  ConstantBuffer.cpp  DescriptorHeap.cpp  DescriptorHeap.h  GPUBuffer.cpp  GaussianBlur.cpp  GraphicsEngine.cpp  GraphicsEngine.h  IndexBuffer.cpp  Material.cpp  Material.h  MeshParts.cpp  MeshParts.h  MiniEngine.h  Model.cpp  Model.h  NullTextureMaps.cpp  NullTextureMaps.h  PipelineState.cpp  RWStructuredBuffer.cpp  RenderContext.h  RenderContext_inline.h  RenderTarget.cpp  RenderTarget.h  RootSignature.cpp  RootSignature.h  Shader.cpp  Shader.h  Skeleton.cpp  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  VertexBuffer.cpp  tkEngine.cpp  tkEngine.h
tools/: readme.txt  setup.ps1
tools/3dsMaxScripts/: tkExporter.ms
tools/k2SLEditor/: makefile
toolsProj/k2SLEditorProj/: VSCode.txt  mainwindow.py  mk.bat  myimage.py  実装予定.txt
(+3409 files in other folders)
